<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/descriptionOrdre"
                android:layout_width="392dp"
                android:layout_height="67dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewOrdre" />

            <TextView
                android:id="@+id/textViewOrdre"
                android:layout_width="143dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/fiche_ordre"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionSousEmbranchement" />

            <TextView
                android:id="@+id/descriptionSousEmbranchement"
                android:layout_width="392dp"
                android:layout_height="67dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewSousEmbranchement" />

            <TextView
                android:id="@+id/textViewSousEmbranchement"
                android:layout_width="189dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/fiche_sous_embranchements"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionEmbranchement" />

            <TextView
                android:id="@+id/descriptionEmbranchement"
                android:layout_width="392dp"
                android:layout_height="67dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewEmbranchement" />

            <TextView
                android:id="@+id/textViewEmbranchement"
                android:layout_width="143dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/fiche_embranchement"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionEspece" />

            <TextView
                android:id="@+id/descriptionEspece"
                android:layout_width="392dp"
                android:layout_height="67dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewEspece" />

            <TextView
                android:id="@+id/textViewEspece"
                android:layout_width="143dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/fiche_espece"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionGenre" />

            <TextView
                android:id="@+id/descriptionGenre"
                android:layout_width="392dp"
                android:layout_height="67dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewGenre" />

            <TextView
                android:id="@+id/textViewGenre"
                android:layout_width="143dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/fiche_genre"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textNomAnimal" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="409dp"
                android:layout_height="161dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.626"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.003">

                <ImageView
                    android:id="@+id/imageAnimal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/coelacanthe"
                    android:contentDescription="@string/fiche_content_description_image" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textNomAnimal"
                android:layout_width="201dp"
                android:layout_height="33dp"
                android:layout_marginStart="175dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="178dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <TextView
                android:id="@+id/textViewUicn"
                android:layout_width="143dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/fiche_uicn"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionOrdre" />

            <TextView
                android:id="@+id/descriptionUicn"
                android:layout_width="392dp"
                android:layout_height="67dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewUicn" />

            <TextView
                android:id="@+id/textViewPhysiques"
                android:layout_width="143dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/fiche_physiques"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionUicn" />

            <TextView
                android:id="@+id/descriptionPhysiques"
                android:layout_width="392dp"
                android:layout_height="67dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPhysiques" />

            <TextView
                android:id="@+id/textViewSexes"
                android:layout_width="143dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/fiche_sexes"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionPhysiques" />

            <TextView
                android:id="@+id/descriptionSexes"
                android:layout_width="392dp"
                android:layout_height="67dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewSexes" />

            <TextView
                android:id="@+id/textViewVies"
                android:layout_width="143dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/fiche_vies"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionSexes" />

            <TextView
                android:id="@+id/descriptionVies"
                android:layout_width="392dp"
                android:layout_height="67dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewVies" />

            <TextView
                android:id="@+id/textViewReproductions"
                android:layout_width="143dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/fiche_reproductions"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionVies" />

            <TextView
                android:id="@+id/descriptionReproductions"
                android:layout_width="392dp"
                android:layout_height="67dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewReproductions" />

            <TextView
                android:id="@+id/textViewGeographie"
                android:layout_width="143dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/fiche_geographie"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionReproductions" />

            <TextView
                android:id="@+id/descriptionGeographie"
                android:layout_width="392dp"
                android:layout_height="67dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewGeographie" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
