<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSaveAnimal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/titre"
                android:layout_width="377dp"
                android:layout_height="70dp"
                android:layout_marginStart="175dp"
                android:layout_marginEnd="178dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewNomAnimal"
                android:layout_width="143dp"
                android:layout_height="31dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/nom_animal"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titre" />

            <EditText
                android:id="@+id/descriptionNom"
                android:layout_width="392dp"
                android:layout_height="67dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/veuillez_saisir_le_nom_de_l_animal"
                android:inputType="textMultiLine"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNomAnimal" />

            <TextView
                android:id="@+id/textViewNomImage"
                android:layout_width="143dp"
                android:layout_height="31dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/nom_image"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionNom" />

            <EditText
                android:id="@+id/descriptionNomImage"
                android:layout_width="392dp"
                android:layout_height="67dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="Veuillez saisir le nom de l'image de l'animal"
                android:inputType="textMultiLine"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNomImage" />

            <EditText
                android:id="@+id/descriptionOrdre"
                android:layout_width="392dp"
                android:layout_height="67dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="Veuillez saisir l'ordre"
                android:inputType="textMultiLine"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewOrdre"
                tools:ignore="EditableContentDescCheck" />

            <TextView
                android:id="@+id/textViewOrdre"
                android:layout_width="143dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/fiche_ordre"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionSousEmbranchement" />

            <EditText
                android:id="@+id/descriptionSousEmbranchement"
                android:layout_width="392dp"
                android:layout_height="67dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="Veuillez saisir l'ordre"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewSousEmbranchement"
                tools:ignore="EditableContentDescCheck" />

            <TextView
                android:id="@+id/textViewSousEmbranchement"
                android:layout_width="189dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/fiche_sous_embranchements"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionEmbranchement" />

            <EditText
                android:id="@+id/descriptionEmbranchement"
                android:layout_width="392dp"
                android:layout_height="67dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="Veuillez saisir les Embranchements"
                android:inputType="textMultiLine"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewEmbranchement"
                tools:ignore="EditableContentDescCheck" />

            <TextView
                android:id="@+id/textViewEmbranchement"
                android:layout_width="143dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/fiche_embranchement"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionEspece" />

            <EditText
                android:id="@+id/descriptionEspece"
                android:layout_width="392dp"
                android:layout_height="67dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="Veuillez saisir les especes"
                android:inputType="textMultiLine"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewEspece"
                tools:ignore="EditableContentDescCheck" />

            <TextView
                android:id="@+id/textViewEspece"
                android:layout_width="143dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/fiche_espece"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionGenre" />

            <EditText
                android:id="@+id/descriptionGenre"
                android:layout_width="392dp"
                android:layout_height="67dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="Veuillez saisir le genre"
                android:inputType="textMultiLine"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewGenre" />

            <TextView
                android:id="@+id/textViewGenre"
                android:layout_width="143dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/fiche_genre"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionNomImage" />

            <TextView
                android:id="@+id/textViewUicn"
                android:layout_width="143dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/fiche_uicn"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionOrdre" />

            <EditText
                android:id="@+id/descriptionUicn"
                android:layout_width="392dp"
                android:layout_height="67dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="Veuillez saisir les Uicn"
                android:inputType="textMultiLine"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewUicn"
                tools:ignore="EditableContentDescCheck" />

            <TextView
                android:id="@+id/textViewPhysiques"
                android:layout_width="143dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/fiche_physiques"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionUicn" />

            <EditText
                android:id="@+id/descriptionPhysiques"
                android:layout_width="392dp"
                android:layout_height="67dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="Veuillez saisir la description physique"
                android:inputType="textMultiLine"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPhysiques"
                tools:ignore="EditableContentDescCheck" />

            <TextView
                android:id="@+id/textViewSexes"
                android:layout_width="143dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/fiche_sexes"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionPhysiques" />

            <EditText
                android:id="@+id/descriptionSexes"
                android:layout_width="392dp"
                android:layout_height="67dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="Veuillez saisir le sex de l'anilaml"
                android:inputType="textMultiLine"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewSexes"
                tools:ignore="EditableContentDescCheck" />

            <TextView
                android:id="@+id/textViewVies"
                android:layout_width="143dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/fiche_vies"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionSexes" />

            <EditText
                android:id="@+id/descriptionVies"
                android:layout_width="392dp"
                android:layout_height="67dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="Veuillez saisir la durée de vie"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewVies"
                tools:ignore="EditableContentDescCheck" />

            <TextView
                android:id="@+id/textViewReproductions"
                android:layout_width="143dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:inputType="textMultiLine"
                android:text="@string/fiche_reproductions"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionVies" />

            <EditText
                android:id="@+id/descriptionReproductions"
                android:layout_width="392dp"
                android:layout_height="67dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="Veuillez saisir les reproductions"
                android:inputType="textMultiLine"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewReproductions"
                tools:ignore="EditableContentDescCheck" />

            <TextView
                android:id="@+id/textViewGeographie"
                android:layout_width="143dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/fiche_geographie"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionReproductions" />

            <EditText
                android:id="@+id/descriptionGeographie"
                android:layout_width="392dp"
                android:layout_height="67dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="Veuillez saisir les lieux où se trouvent l'animal"
                android:inputType="textMultiLine"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewGeographie"
                tools:ignore="EditableContentDescCheck" />

            <Button
                android:id="@+id/buttonSaveAnimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionGeographie"
                tools:text="Enregistrer" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
